# conan-qt-static-repro

./: CMakeLists.txt  conanfile.txt
